# second-brain

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  second_brain_master_prompt.md  secondbrain.sqlite
docs/: api.md  production.md
src/secondbrain/: __init__.py  activation.py  api.py  assemble.py  cli.py  clusters.py  config.py  consolidate.py  entity.py  eval.py  graph.py  llm.py  mcp_server.py  models.py  observability.py  storage.py  store.py  weights.py
src/secondbrain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/secondbrain/embeddings/: __init__.py  anthropic.py  base.py  local.py  openai.py  sentence_transformers.py
src/secondbrain/vectors/: __init__.py  base.py  inmemory.py  lancedb.py
tests/: longitudinal_benchmark.py  sentence_transformer_provider.py  test_activation.py  test_cli.py  test_consolidate.py  test_deep_evaluation.py  test_enterprise_readiness.py  test_entity.py  test_eval_harness.py  test_mcp_server.py  test_production_features.py  test_publish_metadata.py  test_weights.py
tests/fixtures/knowledge/: aerospace.md  agriculture.md  education.md  energy.md  finance.md  healthcare.md  hospitality.md  manufacturing.md  public_sector.md  retail.md  sports.md  telecom.md
