[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secondbrain"
version = "0.1.0a1"
description = "Graph-based associative memory for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Adewunmi" }]
keywords = ["memory", "llm", "graph", "ai", "retrieval"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy",
  "networkx",
  "sqlmodel",
  "sqlalchemy",
  "lancedb",
  "sentence-transformers"
]

[project.urls]
Repository = "https://github.com/yourusername/second-brain"
Homepage = "https://github.com/yourusername/second-brain"

[project.optional-dependencies]
server = ["anthropic", "openai", "mcp"]

[project.scripts]
secondbrain = "secondbrain.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
