[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "second-brain"
version = "0.2.0"
description = "Graph-based associative memory for LLM agents — spreading activation, Hebbian learning, self-evolving entities"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "aadebusayo" }]
keywords = ["memory", "llm", "graph", "ai", "retrieval", "rag", "entity-extraction", "spreading-activation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy",
  "networkx",
  "sqlmodel",
  "sqlalchemy",
  "lancedb",
  "sentence-transformers",
  "python-igraph",
  "leidenalg",
  "apscheduler",
]

[project.urls]
Repository = "https://github.com/aadebusayo/second-brain"
Homepage = "https://github.com/aadebusayo/second-brain"
Issues = "https://github.com/aadebusayo/second-brain/issues"

[project.optional-dependencies]
server = ["anthropic", "openai", "mcp"]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secondbrain = ["*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
